cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
project(miniaudio VERSION 0.11.8 LANGUAGES C)

set(HAVE_64_BIT 1)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_C_STANDARD 99)
#set(CMAKE_C_VISIBILITY_PRESET hidden)
#set(CMAKE_VISIBILITY_INLINES_HIDDEN ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_library(miniaudio STATIC "miniaudio.c")
